--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,4 @@
-  use_frameworks!
+use_frameworks!
 platform :ios, '13.0'
 
 target 'AltibbiTelehealth_Example' do
@@ -8,5 +8,14 @@ target 'AltibbiTelehealth_Example' do
     inherit! :search_paths
 
 
+  end
+end
+post_install do |installer|
+  installer.generated_projects.each do |project|
+    project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      end
+    end
   end
 end
