--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,5 @@
 use_frameworks!
-platform :ios, '14.0'
+platform :ios, '13.0'
 
 target 'AltibbiTelehealth_Example' do
   pod 'AltibbiTelehealth', :path => '../'
@@ -10,3 +10,13 @@ target 'AltibbiTelehealth_Example' do
 
   end
 end
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    if target.name == 'TweetNacl'
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      end
+    end
+  end
+end
+
